BCC__BCC36B__P1__Jorge_1511424/implementacao/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    identificador -> ID
Rule 12    var -> identificador
Rule 13    var -> identificador indice
Rule 14    indice -> indice ABRE_COL expressao FECHA_COL
Rule 15    indice -> ABRE_COL expressao FECHA_COL
Rule 16    tipo -> INTEIRO
Rule 17    tipo -> FLUTUANTE
Rule 18    declaracao_funcao -> tipo cabecalho
Rule 19    declaracao_funcao -> cabecalho
Rule 20    cabecalho -> identificador ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 21    lista_parametros -> lista_parametros VIRGULA parametro
Rule 22    lista_parametros -> parametro
Rule 23    lista_parametros -> vazio
Rule 24    parametro -> tipo DOIS_PONTOS identificador
Rule 25    parametro -> parametro ABRE_COL FECHA_COL
Rule 26    corpo -> corpo acao
Rule 27    corpo -> vazio
Rule 28    acao -> expressao
Rule 29    acao -> declaracao_variaveis
Rule 30    acao -> se
Rule 31    acao -> repita
Rule 32    acao -> leia
Rule 33    acao -> escreva
Rule 34    acao -> retorna
Rule 35    acao -> error
Rule 36    se -> SE expressao ENTAO corpo FIM
Rule 37    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 38    repita -> REPITA corpo ATE expressao
Rule 39    atribuicao -> var ATRIBUICAO expressao
Rule 40    leia -> LEIA ABRE_PAR var FECHA_PAR
Rule 41    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 42    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 43    expressao -> expressao_logica
Rule 44    expressao -> atribuicao
Rule 45    expressao_logica -> expressao_simples
Rule 46    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 47    expressao_simples -> expressao_aditiva
Rule 48    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 49    expressao_aditiva -> expressao_multiplicativa
Rule 50    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 51    expressao_multiplicativa -> expressao_unaria
Rule 52    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 53    expressao_unaria -> fator
Rule 54    expressao_unaria -> operador_soma fator
Rule 55    expressao_unaria -> operador_negacao fator
Rule 56    operador_relacional -> MENOR
Rule 57    operador_relacional -> MAIOR
Rule 58    operador_relacional -> IGUALDADE
Rule 59    operador_relacional -> DESIGUALDADE
Rule 60    operador_relacional -> MENOR_IGUAL
Rule 61    operador_relacional -> MAIOR_IGUAL
Rule 62    operador_soma -> SOMA
Rule 63    operador_soma -> SUBTRACAO
Rule 64    operador_logico -> E_LOGICO
Rule 65    operador_logico -> OU_LOGICO
Rule 66    operador_negacao -> NEGACAO
Rule 67    operador_multiplicacao -> MULTIPLICACAO
Rule 68    operador_multiplicacao -> DIVISAO
Rule 69    fator -> ABRE_PAR expressao FECHA_PAR
Rule 70    fator -> var
Rule 71    fator -> chamada_funcao
Rule 72    fator -> numero
Rule 73    numero -> NUM_INTEIRO
Rule 74    numero -> NUM_PONTO_FLUTUANTE
Rule 75    numero -> NUM_NOTACAO_CIENTIFICA
Rule 76    chamada_funcao -> identificador ABRE_PAR lista_argumentos FECHA_PAR
Rule 77    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 78    lista_argumentos -> expressao
Rule 79    lista_argumentos -> vazio
Rule 80    comentario -> COMENTARIO
Rule 81    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 14 15 25
ABRE_PAR             : 20 40 41 42 69 76
ATE                  : 38
ATRIBUICAO           : 39
COMENTARIO           : 80
DESIGUALDADE         : 59
DIVISAO              : 68
DOIS_PONTOS          : 7 24
ENTAO                : 36 37
ESCREVA              : 41
E_LOGICO             : 64
FECHA_COL            : 14 15 25
FECHA_PAR            : 20 40 41 42 69 76
FIM                  : 20 36 37
FLUTUANTE            : 17
ID                   : 11
IGUALDADE            : 58
INTEIRO              : 16
LEIA                 : 40
MAIOR                : 57
MAIOR_IGUAL          : 61
MENOR                : 56
MENOR_IGUAL          : 60
MULTIPLICACAO        : 67
NEGACAO              : 66
NUM_INTEIRO          : 73
NUM_NOTACAO_CIENTIFICA : 75
NUM_PONTO_FLUTUANTE  : 74
OU_LOGICO            : 65
REPITA               : 38
RETORNA              : 42
SE                   : 36 37
SENAO                : 37
SOMA                 : 62
SUBTRACAO            : 63
VIRGULA              : 9 21 77
error                : 35

Nonterminals, with rules where they appear

acao                 : 26
atribuicao           : 8 44
cabecalho            : 18 19
chamada_funcao       : 71
comentario           : 
corpo                : 20 26 36 37 37 38
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 29
escreva              : 33
expressao            : 14 15 28 36 37 38 39 41 42 69 77 78
expressao_aditiva    : 47 48 50
expressao_logica     : 43 46
expressao_multiplicativa : 49 50 52
expressao_simples    : 45 46 48
expressao_unaria     : 51 52
fator                : 53 54 55
identificador        : 12 13 20 24 76
indice               : 13 14
inicializacao_variaveis : 5
leia                 : 32
lista_argumentos     : 76 77
lista_declaracoes    : 1 2
lista_parametros     : 20 21
lista_variaveis      : 7 9
numero               : 72
operador_logico      : 46
operador_multiplicacao : 52
operador_negacao     : 55
operador_relacional  : 48
operador_soma        : 50 54
parametro            : 21 22 25
programa             : 0
repita               : 31
retorna              : 34
se                   : 30
tipo                 : 7 18 24
var                  : 9 10 39 40 70
vazio                : 23 27 79

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (18) declaracao_funcao -> . tipo cabecalho
    (19) declaracao_funcao -> . cabecalho
    (16) tipo -> . INTEIRO
    (17) tipo -> . FLUTUANTE
    (39) atribuicao -> . var ATRIBUICAO expressao
    (20) cabecalho -> . identificador ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> . identificador
    (13) var -> . identificador indice
    (11) identificador -> . ID

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 14

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12
    identificador                  shift and go to state 13

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (18) declaracao_funcao -> . tipo cabecalho
    (19) declaracao_funcao -> . cabecalho
    (16) tipo -> . INTEIRO
    (17) tipo -> . FLUTUANTE
    (39) atribuicao -> . var ATRIBUICAO expressao
    (20) cabecalho -> . identificador ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> . identificador
    (13) var -> . identificador indice
    (11) identificador -> . ID

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 14

    declaracao                     shift and go to state 15
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12
    identificador                  shift and go to state 13

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (18) declaracao_funcao -> tipo . cabecalho
    (20) cabecalho -> . identificador ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) identificador -> . ID

    DOIS_PONTOS     shift and go to state 16
    ID              shift and go to state 14

    cabecalho                      shift and go to state 17
    identificador                  shift and go to state 18

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (19) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 19 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 19 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 19 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 19 (declaracao_funcao -> cabecalho .)


state 10

    (16) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 16 (tipo -> INTEIRO .)
    ID              reduce using rule 16 (tipo -> INTEIRO .)


state 11

    (17) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 17 (tipo -> FLUTUANTE .)
    ID              reduce using rule 17 (tipo -> FLUTUANTE .)


state 12

    (39) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 19


state 13

    (20) cabecalho -> identificador . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> identificador .
    (13) var -> identificador . indice
    (14) indice -> . indice ABRE_COL expressao FECHA_COL
    (15) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 20
    ATRIBUICAO      reduce using rule 12 (var -> identificador .)
    ABRE_COL        shift and go to state 22

    indice                         shift and go to state 21

state 14

    (11) identificador -> ID .

    ABRE_PAR        reduce using rule 11 (identificador -> ID .)
    ABRE_COL        reduce using rule 11 (identificador -> ID .)
    ATRIBUICAO      reduce using rule 11 (identificador -> ID .)
    VIRGULA         reduce using rule 11 (identificador -> ID .)
    INTEIRO         reduce using rule 11 (identificador -> ID .)
    FLUTUANTE       reduce using rule 11 (identificador -> ID .)
    ID              reduce using rule 11 (identificador -> ID .)
    $end            reduce using rule 11 (identificador -> ID .)
    FIM             reduce using rule 11 (identificador -> ID .)
    error           reduce using rule 11 (identificador -> ID .)
    SE              reduce using rule 11 (identificador -> ID .)
    REPITA          reduce using rule 11 (identificador -> ID .)
    LEIA            reduce using rule 11 (identificador -> ID .)
    ESCREVA         reduce using rule 11 (identificador -> ID .)
    RETORNA         reduce using rule 11 (identificador -> ID .)
    SOMA            reduce using rule 11 (identificador -> ID .)
    SUBTRACAO       reduce using rule 11 (identificador -> ID .)
    NEGACAO         reduce using rule 11 (identificador -> ID .)
    NUM_INTEIRO     reduce using rule 11 (identificador -> ID .)
    NUM_PONTO_FLUTUANTE reduce using rule 11 (identificador -> ID .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 11 (identificador -> ID .)
    ATE             reduce using rule 11 (identificador -> ID .)
    SENAO           reduce using rule 11 (identificador -> ID .)
    MULTIPLICACAO   reduce using rule 11 (identificador -> ID .)
    DIVISAO         reduce using rule 11 (identificador -> ID .)
    MENOR           reduce using rule 11 (identificador -> ID .)
    MAIOR           reduce using rule 11 (identificador -> ID .)
    IGUALDADE       reduce using rule 11 (identificador -> ID .)
    DESIGUALDADE    reduce using rule 11 (identificador -> ID .)
    MENOR_IGUAL     reduce using rule 11 (identificador -> ID .)
    MAIOR_IGUAL     reduce using rule 11 (identificador -> ID .)
    E_LOGICO        reduce using rule 11 (identificador -> ID .)
    OU_LOGICO       reduce using rule 11 (identificador -> ID .)
    FECHA_COL       reduce using rule 11 (identificador -> ID .)
    FECHA_PAR       reduce using rule 11 (identificador -> ID .)
    ENTAO           reduce using rule 11 (identificador -> ID .)


state 15

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 16

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (12) var -> . identificador
    (13) var -> . identificador indice
    (11) identificador -> . ID

    ID              shift and go to state 14

    lista_variaveis                shift and go to state 23
    var                            shift and go to state 24
    identificador                  shift and go to state 25

state 17

    (18) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> tipo cabecalho .)


state 18

    (20) cabecalho -> identificador . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 20


state 19

    (39) atribuicao -> var ATRIBUICAO . expressao
    (43) expressao -> . expressao_logica
    (44) expressao -> . atribuicao
    (45) expressao_logica -> . expressao_simples
    (46) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (39) atribuicao -> . var ATRIBUICAO expressao
    (47) expressao_simples -> . expressao_aditiva
    (48) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (12) var -> . identificador
    (13) var -> . identificador indice
    (49) expressao_aditiva -> . expressao_multiplicativa
    (50) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (11) identificador -> . ID
    (51) expressao_multiplicativa -> . expressao_unaria
    (52) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (53) expressao_unaria -> . fator
    (54) expressao_unaria -> . operador_soma fator
    (55) expressao_unaria -> . operador_negacao fator
    (69) fator -> . ABRE_PAR expressao FECHA_PAR
    (70) fator -> . var
    (71) fator -> . chamada_funcao
    (72) fator -> . numero
    (62) operador_soma -> . SOMA
    (63) operador_soma -> . SUBTRACAO
    (66) operador_negacao -> . NEGACAO
    (76) chamada_funcao -> . identificador ABRE_PAR lista_argumentos FECHA_PAR
    (73) numero -> . NUM_INTEIRO
    (74) numero -> . NUM_PONTO_FLUTUANTE
    (75) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 14
    ABRE_PAR        shift and go to state 38
    SOMA            shift and go to state 41
    SUBTRACAO       shift and go to state 42
    NEGACAO         shift and go to state 43
    NUM_INTEIRO     shift and go to state 44
    NUM_PONTO_FLUTUANTE shift and go to state 45
    NUM_NOTACAO_CIENTIFICA shift and go to state 46

    var                            shift and go to state 26
    expressao                      shift and go to state 27
    expressao_logica               shift and go to state 28
    atribuicao                     shift and go to state 29
    expressao_simples              shift and go to state 30
    expressao_aditiva              shift and go to state 31
    identificador                  shift and go to state 32
    expressao_multiplicativa       shift and go to state 33
    operador_soma                  shift and go to state 34
    expressao_unaria               shift and go to state 35
    fator                          shift and go to state 36
    operador_negacao               shift and go to state 37
    chamada_funcao                 shift and go to state 39
    numero                         shift and go to state 40

state 20

    (20) cabecalho -> identificador ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (21) lista_parametros -> . lista_parametros VIRGULA parametro
    (22) lista_parametros -> . parametro
    (23) lista_parametros -> . vazio
    (24) parametro -> . tipo DOIS_PONTOS identificador
    (25) parametro -> . parametro ABRE_COL FECHA_COL
    (81) vazio -> .
    (16) tipo -> . INTEIRO
    (17) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 81 (vazio -> .)
    VIRGULA         reduce using rule 81 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    lista_parametros               shift and go to state 47
    parametro                      shift and go to state 48
    vazio                          shift and go to state 49
    tipo                           shift and go to state 50

state 21

    (13) var -> identificador indice .
    (14) indice -> indice . ABRE_COL expressao FECHA_COL

    ATRIBUICAO      reduce using rule 13 (var -> identificador indice .)
    VIRGULA         reduce using rule 13 (var -> identificador indice .)
    INTEIRO         reduce using rule 13 (var -> identificador indice .)
    FLUTUANTE       reduce using rule 13 (var -> identificador indice .)
    ID              reduce using rule 13 (var -> identificador indice .)
    $end            reduce using rule 13 (var -> identificador indice .)
    FIM             reduce using rule 13 (var -> identificador indice .)
    error           reduce using rule 13 (var -> identificador indice .)
    SE              reduce using rule 13 (var -> identificador indice .)
    REPITA          reduce using rule 13 (var -> identificador indice .)
    LEIA            reduce using rule 13 (var -> identificador indice .)
    ESCREVA         reduce using rule 13 (var -> identificador indice .)
    RETORNA         reduce using rule 13 (var -> identificador indice .)
    ABRE_PAR        reduce using rule 13 (var -> identificador indice .)
    SOMA            reduce using rule 13 (var -> identificador indice .)
    SUBTRACAO       reduce using rule 13 (var -> identificador indice .)
    NEGACAO         reduce using rule 13 (var -> identificador indice .)
    NUM_INTEIRO     reduce using rule 13 (var -> identificador indice .)
    NUM_PONTO_FLUTUANTE reduce using rule 13 (var -> identificador indice .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 13 (var -> identificador indice .)
    ATE             reduce using rule 13 (var -> identificador indice .)
    SENAO           reduce using rule 13 (var -> identificador indice .)
    MULTIPLICACAO   reduce using rule 13 (var -> identificador indice .)
    DIVISAO         reduce using rule 13 (var -> identificador indice .)
    MENOR           reduce using rule 13 (var -> identificador indice .)
    MAIOR           reduce using rule 13 (var -> identificador indice .)
    IGUALDADE       reduce using rule 13 (var -> identificador indice .)
    DESIGUALDADE    reduce using rule 13 (var -> identificador indice .)
    MENOR_IGUAL     reduce using rule 13 (var -> identificador indice .)
    MAIOR_IGUAL     reduce using rule 13 (var -> identificador indice .)
    E_LOGICO        reduce using rule 13 (var -> identificador indice .)
    OU_LOGICO       reduce using rule 13 (var -> identificador indice .)
    FECHA_COL       reduce using rule 13 (var -> identificador indice .)
    FECHA_PAR       reduce using rule 13 (var -> identificador indice .)
    ENTAO           reduce using rule 13 (var -> identificador indice .)
    ABRE_COL        shift and go to state 51


state 22
